--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,22 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='../static/js_fun/search_func.js') }}"></script>
 </head>
 <body>
-<script type=text/javascript>
-        $(function() {
-          $('a#cart').bind('click', function() {
-            $.getJSON('/',
-                function(data) {
-              //do nothing
-            });
-            return false;
-          });
-        });
 
-
-</script>
 <div class="container">
     <nav>
         <div class="nav-wrapper">
@@ -35,27 +22,26 @@
                 </div>
             </form>
         </div>
+     <button id="wish"><a href="/wish_list">View Wishlist</a></button>
+     <button id="home"><a href="/">Home Page</a></button>
     </nav>
 </div>
 
 <div class="container">
     <div class="row">
         {% if products %}
+        <div class="col s12"><h4>Your recent searched products</h4></div>
+        <div class="row">
         {% for _ in products %}
-        <div class="col s6">
-            <div class="col s12"><h4>Your recent searched products</h4></div>
-            <div class="card" id="{{ _[0] }}">
-                <img src="{{ _[3]) }}" alt="{{ _[1] }}" style="width:100%">
-                <p class="price">{{ _[2] }}</p>
-                <p>{{ _[3] }}</p>
-                <p>
-                    <a href=# id=cart>
-                        <button class='btn btn-default'>Test</button>
-                    </a>
-                </p>
+            <div class="col s6">
+                <div class="card" id={{ _[0] }}>
+                    <div class="image_m"><img src="{{ _[3] }}" alt={{ _[1] }} class="image_m"></div>
+                    <p class="price">₹ {{ _[2] }}</p>
+                    <p>{{ _[4] }}</p>
+                </div>
             </div>
-        </div>
         {% endfor %}
+        </div>
         {% else %}
         <h4>No recent activity..</h4>
         {% endif %}
