--- a/templates/make_a_wish.html
+++ b/templates/make_a_wish.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link rel="stylesheet" href="../static/styles/search.css">
     <title>Wish list</title>
 </head>
+
 <body>
 <div class="container">
     <nav>
@@ -18,7 +20,28 @@
                 </div>
             </form>
         </div>
+        <button id="wish"><a href="/wish_list">View Wishlist</a></button>
+        <button id="home"><a href="/">Home Page</a></button>
     </nav>
+</div>
+
+{% if products['found'] %}
+<div class="col s12"><h4>Your wishlist</h4></div>
+{% else %}
+<div class="col s12"><h4>no items in wishlist..</h4></div>
+{% endif %}
+<div class="container">
+    <div class="row">
+        {% for _ in products['data'] %}
+        <div class="col s6">
+            <div class="card" id={{ _[0] }}>
+                <div class="image_m"><img src="{{ _[3] }}" alt={{ _[1] }}></div>
+                <p class="price">₹ {{ _[2] }}</p>
+                <p>{{ _[4] }}</p>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
 </div>
 
 </body>
