--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,37 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>search results for __</title>
+    <title>Welcome!</title>
     <link rel="stylesheet" href="../static/styles/card.css">
     <link rel="stylesheet" href="../static/styles/search.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 
 <div class="container">
     <nav>
+
         <div class="nav-wrapper">
-            <form action="search_item" method="post">
+            <form>
                 <div class="input-field">
-                    <input id="search" type="search" name="product" required>
+                    <input id="search" type="search" required>
                     <label class="label-icon" for="search"><i class="material-icons">search</i></label>
                     <i class="material-icons">close</i>
                 </div>
             </form>
+            <ul class="right hide-on-med-and-down">
+                <li><a class="waves-effect waves-light btn" href="/">Home Page <i class="material-icons right">home</i></a>
+                </li>
+                <li><a class="waves-effect waves-light btn" href="/wish_list">Wish list <i class="material-icons right">bookmark</i></a>
+                </li>
+            </ul>
         </div>
-     <button id="wish"><a href="/wish_list">View Wishlist</a></button>
-     <button id="home"><a href="/">Home Page</a></button>
+
     </nav>
 </div>
 
 <div class="container">
+    <div class="col s12"><h4>Recent searches</h4></div>
+    <hr>
     <div class="row">
         {% if products %}
-        <div class="col s12"><h4>Your recent searched products</h4></div>
         <div class="row">
-        {% for _ in products %}
+            {% for _ in products %}
             <div class="col s6">
                 <div class="card" id={{ _[0] }}>
                     <div class="image_m"><img src="{{ _[3] }}" alt={{ _[1] }} class="image_m"></div>
@@ -40,7 +48,7 @@
                     <p>{{ _[4] }}</p>
                 </div>
             </div>
-        {% endfor %}
+            {% endfor %}
         </div>
         {% else %}
         <h4>No recent activity..</h4>
