--- a/static/styles/card.css
+++ b/static/styles/card.css
@@ -1,5 +1,5 @@
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
   margin: auto;
   text-align: center;
@@ -27,6 +27,12 @@
   cursor: pointer;
   width: 100%;
   font-size: 18px;
+}
+
+#cross {
+    position: absolute;
+    top: 0px;
+    right: 0px;
 }
 
 .card button:hover {
