--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,22 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome!</title>
-    <link rel="stylesheet" href="../static/styles/card.css">
-    <link rel="stylesheet" href="../static/styles/search.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="../static/styles/card.css">
+    <link rel="stylesheet" href="../static/styles/search.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script type="text/javascript" src="../static/some_apis/little_query.js"></script>
 </head>
 <body>
-
 <div class="container">
     <nav>
-
         <div class="nav-wrapper">
-            <form>
+            <form action="search_item" method="post">
                 <div class="input-field">
-                    <input id="search" type="search" required>
+                    <input id="search" type="search" name="product" required>
                     <label class="label-icon" for="search"><i class="material-icons">search</i></label>
                     <i class="material-icons">close</i>
                 </div>
@@ -42,10 +41,19 @@
         <div class="row">
             {% for _ in products %}
             <div class="col s6">
-                <div class="card" id={{ _[0] }}>
-                    <div class="image_m"><img src="{{ _[3] }}" alt={{ _[1] }} class="image_m"></div>
+                <div class="card" id="{{ _[0] }}">
+                    <button id="remove" onclick="remove_or_wish_it($(this).parent(), 1, 'RECENT')"> Remove item
+                        <i class="material-icons right">remove_shopping_cart</i>
+                    </button>
+                    <img src="{{ _[3] }}" alt={{ _[1] }} style="max-height: 200px; max-width: 200px;">
+                    <h5>{{ _[1] }}</h5>
                     <p class="price">₹ {{ _[2] }}</p>
                     <p>{{ _[4] }}</p>
+                    <p id={{ _[0] }}>
+                        <button class='btn btn-default' onclick="remove_or_wish_it($(this).parent(), 0, 'WISHLIST')">Add
+                            to Wishlist
+                        </button>
+                    </p>
                 </div>
             </div>
             {% endfor %}
