--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>Welcome!</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <link rel="stylesheet" href="../static/styles/card.css">
     <link rel="stylesheet" href="../static/styles/search.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script type="text/javascript" src="../static/some_apis/little_query.js"></script>
 </head>
 <body>
@@ -27,12 +27,30 @@
                 </li>
                 <li><a class="waves-effect waves-light btn" href="/wish_list">Wish list <i class="material-icons right">bookmark</i></a>
                 </li>
+                <li>
+                    <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Mail me my Wishlist<i
+                            class="material-icons right">mail</i></a>
+                    <div class="modal" id="modal1">
+                        <div class="modal-content">
+                            <h4>Modal Header</h4>
+                            <p>A bunch of text</p>
+                        </div>
+                        <div class="modal-footer">
+                            <a class="waves-effect waves-light btn" onclick="mail_me()"><i
+                                    class="material-icons right">send</i></a>
+                        </div>
+                    </div>
+                </li>
             </ul>
         </div>
-
     </nav>
 </div>
 
+<script>
+    $(document).ready(function () {
+        $(".modal").modal();
+    })
+</script>
 <div class="container">
     <div class="col s12"><h4>Recent searches</h4></div>
     <hr>
