--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -30,26 +30,32 @@
                 <li>
                     <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Mail me my Wishlist<i
                             class="material-icons right">mail</i></a>
-                    <div class="modal" id="modal1">
-                        <div class="modal-content">
-                            <h4>Modal Header</h4>
-                            <p>A bunch of text</p>
-                        </div>
-                        <div class="modal-footer">
-                            <a class="waves-effect waves-light btn" onclick="mail_me()"><i
-                                    class="material-icons right">send</i></a>
-                        </div>
-                    </div>
                 </li>
             </ul>
         </div>
     </nav>
+    <div class="modal" id="modal1">
+        <div class="modal-content">
+            <h4>Put your mail ID</h4>
+            <div class="input-field col s6"><input id="e_mail" type="text" class="validate">
+            </div>
+            <div class="modal-footer">
+                <a class="waves-effect waves-light btn" onclick="mail_me()"><i
+                        class="material-icons right">send</i></a>
+            </div>
+        </div>
+    </div>
 </div>
 
+
 <script>
-    $(document).ready(function () {
-        $(".modal").modal();
-    })
+    document.addEventListener('DOMContentLoaded', function() {
+        var elem = document.querySelector('.modal');
+        var instances = M.Modal.init(elem);
+  });
+
+
+
 </script>
 <div class="container">
     <div class="col s12"><h4>Recent searches</h4></div>
