--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -17,7 +17,7 @@
         <div class="nav-wrapper">
             <form action="search_item" method="post">
                 <div class="input-field">
-                    <input id="search" type="search" name="product" required>
+                    <input id="search" type="search" name="product" placeholder="Nike, Adidas.." required>
                     <label class="label-icon" for="search"><i class="material-icons">search</i></label>
                     <i class="material-icons">close</i>
                 </div>
